--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,18 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[features]
+fitting = ["varpro"]
+generation = ["rand", "statsrs"]
+rawloader = ["rawloading"]
+plotting = ["plotters"]
+
 [dependencies]
 anyhow = "1.0.66"
-levenberg-marquardt = "0.12.0"
-linregress = "0.5.0"
 nalgebra = "0.30.1"
 num = "0.4.0"
-plotters = "0.3.4"
+plotters = {version = "0.3.4", optional = true}
 rand = "0.8.5"
-rawloader = {path="rawloader"}
+rawloader = { path = "rawloader" }
 statrs = "0.16.0"
-varpro = "0.4.0"
+varpro = { version = "0.4.0", optional = true }
