--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "rawloader"]
 	path = rawloader
-	url = https://github.com/pedrocr/rawloader/
+	url = http://github.com/TrueDoctor/rawloader
