Add epsilon to log fitting

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ fitting = ["varpro"]
 generation = ["rand", "statrs"]
 rawloading = ["rawloader"]
 plotting = ["plotters"]
+default = ["fitting"]
 
 [dependencies]
 anyhow = "1.0.66"
