--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "autoquant"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -14,6 +15,9 @@ default = ["fitting"]
 
 [dependencies]
 anyhow = "1.0.66"
+argmin = { version = "0.7.0", features = ["_nalgebral"] }
+argmin-math = { version = "0.2", features = ["nalgebra_latest-serde"] }
+log = "0.4.17"
 nalgebra = "0.30.1"
 num = "0.4.0"
 plotters = {version = "0.3.4", optional = true}
