--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ license = "MIT"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-fitting = ["varpro"]
+fitting = []
 generation = ["rand", "statrs"]
 rawloading = ["rawloader"]
 plotting = ["plotters"]
@@ -20,8 +20,7 @@ argmin-math = { version = "0.2", features = ["nalgebra_latest-serde"] }
 log = "0.4.17"
 nalgebra = "0.30.1"
 num = "0.4.0"
-plotters = {version = "0.3.4", optional = true}
-rand = {version = "0.8.5", optional = true}
+plotters = { version = "0.3.4", optional = true }
+rand = { version = "0.8.5", optional = true }
 rawloader = { path = "rawloader", optional = true }
-statrs = {version = "0.16.0", optional = true}
-varpro = { version = "0.4.0", optional = true }
+statrs = { version = "0.16.0", optional = true }
