--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,4 +23,5 @@ num = "0.4.0"
 plotters = { version = "0.3.4", optional = true }
 rand = { version = "0.8.5", optional = true }
 rawloader = { path = "rawloader", optional = true }
+rayon = "1.7.0"
 statrs = { version = "0.16.0", optional = true }
